@@ -10,7 +10,6 @@ require "secure_headers/headers/x_content_type_options"
 require "secure_headers/headers/x_download_options"
 require "secure_headers/headers/x_permitted_cross_domain_policies"
 require "secure_headers/railtie"
-require "secure_headers/hash_helper"
 require "secure_headers/view_helper"
 
 # All headers (except for hpkp) have a default value. Provide SecureHeaders::OPT_OUT
@@ -24,7 +23,7 @@ module SecureHeaders
   NONCE_KEY = "content_security_policy_nonce"
 
   ALL_HEADER_CLASSES = [
-    SecureHeaders::CSP,
+    SecureHeaders::ContentSecurityPolicy,
     SecureHeaders::StrictTransportSecurity,
     SecureHeaders::PublicKeyPins,
     SecureHeaders::XContentTypeOptions,
@@ -37,19 +36,22 @@ module SecureHeaders
   module Configuration
     class << self
       attr_accessor :hsts, :x_frame_options, :x_content_type_options,
-        :x_xss_protection, :csp, :x_download_options, :script_hashes,
-        :x_permitted_cross_domain_policies, :hpkp
+        :x_xss_protection, :csp, :x_download_options, :x_permitted_cross_domain_policies,
+        :hpkp
+
+      def default_headers
+        @default_headers ||= {}
+      end
 
       def configure(&block)
         instance_eval &block
-        if File.exists?(SCRIPT_HASH_CONFIG_FILE)
-          ::SecureHeaders::Configuration.script_hashes = YAML.load(File.open(SCRIPT_HASH_CONFIG_FILE))
-        end
+        validate_config!
+        @default_headers = SecureHeaders::all_header_hash
       end
 
       def validate_config!
         StrictTransportSecurity.validate_config!(self.hsts)
-        CSP.validate_config!(self.csp)
+        ContentSecurityPolicy.validate_config!(self.csp)
         XFrameOptions.validate_config!(self.x_frame_options)
         XContentTypeOptions.validate_config!(self.x_content_type_options)
         XXssProtection.validate_config!(self.x_xss_protection)
@@ -69,54 +71,82 @@ module SecureHeaders
       end
     end
 
-    def header_hash(env)
-      RequestLocals.store[SECURE_HEADERS_CONFIG] ||= {}
+    # Returns all headers for a given config, including headers that
+    # may not apply to a given request (e.g. hsts on non-ssl pages)
+    def all_header_hash(env = {})
+      puts "all headers"
+      puts env
+      puts request_config
       ALL_HEADER_CLASSES.inject({}) do |memo, klass|
-        header_config = env[klass::Constants::CONFIG_KEY] ||
-          RequestLocals.fetch(SECURE_HEADERS_CONFIG) { {} }[klass::Constants::CONFIG_KEY] ||
-          SecureHeaders::Configuration.send(klass::Constants::CONFIG_KEY)
+        header_config = env[klass::CONFIG_KEY] ||
+          request_config[klass::CONFIG_KEY]
 
-        unless header_config == OPT_OUT || (ssl_required?(klass) && env[:ssl] != true)
-          header = if klass == SecureHeaders::CSP
-            header_config.merge!(:ua => env["HTTP_USER_AGENT"]) if header_config
-            CSP.new(header_config)
-          else
-            klass.new(header_config)
+        header = if header_config
+          if klass == SecureHeaders::CSP && header_config != SecureHeaders::OPT_OUT
+            header_config.merge!(:ua => env["HTTP_USER_AGENT"])
           end
-
-          memo[header.name] = header.value
+          make_header(klass, header_config)
+        else
+          SecureHeaders::Configuration::default_headers[klass::CONFIG_KEY] ||
+            make_header(klass, SecureHeaders::Configuration.send(klass::CONFIG_KEY))
         end
 
+        memo[header.name] = header.value if header
         memo
       end
     end
 
+    def make_header(klass, header_config)
+      unless header_config == OPT_OUT
+        klass.new(header_config)
+      end
+    end
+
+    # Strips out headers not applicable to this request
+    def header_hash(env = {})
+      puts env
+      unless env[:ssl]
+        all_header_hash(env).merge(hsts: OPT_OUT, hpkp: OPT_OUT )
+      else
+        all_header_hash(env)
+      end
+    end
+
     def content_security_policy_nonce
-      puts "Calling nonce: #{RequestLocals.fetch(SECURE_HEADERS_CONFIG)}"
-      RequestLocals.store[SECURE_HEADERS_CONFIG] ||= {}
-      unless RequestLocals.fetch(SECURE_HEADERS_CONFIG)[NONCE_KEY]
-        RequestLocals.store[SECURE_HEADERS_CONFIG][NONCE_KEY] = SecureRandom.base64(32).chomp
+      puts "Calling nonce: #{Thread.current[SECURE_HEADERS_CONFIG]}"
+      unless request_config[NONCE_KEY]
+        request_config[NONCE_KEY] = SecureRandom.base64(32).chomp
 
         # unsafe-inline is automatically added for backwards compatibility. The spec says to ignore unsafe-inline
         # when a nonce is present
-        append_content_security_policy_source(script_src: ["'nonce-#{RequestLocals.store[SECURE_HEADERS_CONFIG][NONCE_KEY]}'", CSP::UNSAFE_INLINE])
+        append_content_security_policy_source(script_src: ["'nonce-#{request_config[NONCE_KEY]}'", CSP::UNSAFE_INLINE])
       end
 
-      RequestLocals.store[SECURE_HEADERS_CONFIG][NONCE_KEY]
+      request_config[NONCE_KEY]
+    end
+
+    def request_config
+      Thread.current[SECURE_HEADERS_CONFIG] ||= {}
+    end
+
+    def request_config=(config)
+      Thread.current[SECURE_HEADERS_CONFIG] = config
     end
 
     def append_content_security_policy_source(additions)
-      RequestLocals.store[SECURE_HEADERS_CONFIG] ||= {}
-      config = if RequestLocals.fetch(SECURE_HEADERS_CONFIG)[SecureHeaders::CSP::CONFIG_KEY]
-        RequestLocals.store[SECURE_HEADERS_CONFIG][SecureHeaders::CSP::CONFIG_KEY]
-      else
-        ::SecureHeaders::Configuration.send(:csp)
-      end
+      config = request_config[SecureHeaders::CSP::CONFIG_KEY] ||
+        ::SecureHeaders::Configuration.send(:csp).dup
 
       config.merge!(additions) do |_, lhs, rhs|
         lhs | rhs
       end
-      RequestLocals.store[SECURE_HEADERS_CONFIG][SecureHeaders::CSP::CONFIG_KEY] = config
+      request_config[SecureHeaders::CSP::CONFIG_KEY] = config
+    end
+
+    def override_content_security_policy_directives(additions)
+      config = request_config[SecureHeaders::CSP::CONFIG_KEY] ||
+        ::SecureHeaders::Configuration.send(:csp).dup
+      request_config[SecureHeaders::CSP::CONFIG_KEY] = config.merge(additions)
     end
 
     private
@@ -127,8 +157,8 @@ module SecureHeaders
   end
 
   module InstanceMethods
-    def secure_headers_config
-      RequestLocals.fetch(SECURE_HEADERS_CONFIG)
+    def request_config
+      SecureHeaders::request_config
     end
 
     def content_security_policy_nonce
@@ -141,38 +171,18 @@ module SecureHeaders
     end
 
     # Overrides the previously set source list for the provided directives, override 'none' values
-    def override_content_security_policy_directive(additions)
-      RequestLocals.store[SECURE_HEADERS_CONFIG] ||= {}
-      config = if RequestLocals.fetch(SECURE_HEADERS_CONFIG)[SecureHeaders::CSP::CONFIG_KEY]
-        RequestLocals.store[SECURE_HEADERS_CONFIG][SecureHeaders::CSP::CONFIG_KEY]
-      else
-        ::SecureHeaders::Configuration.send(:csp)
-      end
-      RequestLocals.store[SECURE_HEADERS_CONFIG][SecureHeaders::CSP::CONFIG_KEY] = config.merge(additions)
+    def override_content_security_policy_directives(additions)
+      SecureHeaders::override_content_security_policy_directive(additions)
     end
 
     def override_x_frame_options(value)
-      raise "override_x_frame_options may only be called once per action." if RequestLocals.fetch(SECURE_HEADERS_CONFIG)[SecureHeaders::XFrameOptions::CONFIG_KEY]
-      RequestLocals.store[SECURE_HEADERS_CONFIG][SecureHeaders::XFrameOptions::CONFIG_KEY] = value
+      raise "override_x_frame_options may only be called once per action." if SecureHeaders::request_config[SecureHeaders::XFrameOptions::CONFIG_KEY]
+      SecureHeaders::request_config[SecureHeaders::XFrameOptions::CONFIG_KEY] = value
     end
 
     def override_hpkp(config)
-      raise "override_hpkp may only be called once per action." if RequestLocals.fetch(SECURE_HEADERS_CONFIG)[SecureHeaders::PublicKeyPins::CONFIG_KEY]
-      RequestLocals.store[SECURE_HEADERS_CONFIG][SecureHeaders::PublicKeyPins::CONFIG_KEY] = config
-    end
-
-    def prep_script_hash
-      ActiveSupport::Notifications.subscribe("render_partial.action_view") do |event_name, start_at, end_at, id, payload|
-        save_hash_for_later payload
-      end
-
-      ActiveSupport::Notifications.subscribe("render_template.action_view") do |event_name, start_at, end_at, id, payload|
-        save_hash_for_later payload
-      end
-    end
-
-    def save_hash_for_later payload
-      raise 'not implemented'
+      raise "override_hpkp may only be called once per action." if SecureHeaders::request_config[SecureHeaders::PublicKeyPins::CONFIG_KEY]
+      SecureHeaders::request_config[SecureHeaders::PublicKeyPins::CONFIG_KEY] = config
     end
   end
 end
