@@ -5,7 +5,6 @@ module SecureHeaders
       # Main class that register this extension.
       #
       def registered(app)
-        app.extend SecureHeaders::ClassMethods
         app.helpers SecureHeaders::InstanceMethods
       end
       alias :included :registered
